--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -1,1 +1,62 @@
 <p>certs-pers-crd works!</p>
+
+<p-dialog
+  [(visible)]="addFileDialog"
+  [modal]="true"
+  [closable]="false"
+  [style]="{ width: '650px' }"
+>
+  <ng-template pTemplate="header">
+    <div class="flex flex-column">
+      <div class="flex align-items-start justify-content-start h-3rem">
+        <h2>Agrega un archivo</h2>
+      </div>
+      <div class="flex align-items-start justify-content-start h-2rem">
+        <p>Sube tu nuevo certificado, diploma o algún archivo que respalde tus aptitudes.</p>
+      </div>
+    </div>
+  </ng-template>
+  <div class="flex flex-warp align-items-center justify-content-center">
+    <button
+      pButton
+      class="p-button-outlined border-300 w-full flex flex-column"
+    >
+      <i
+        class="pi pi-cloud-upload px-2 pt-5"
+        style="font-size: 1.5rem; color: #708090"
+      ></i>
+      <span
+        class="px-3 pt-5 flex align-items-center justify-content-center font-bold border-round"
+        style="color: #0b85c3"
+        >Sube un archivo</span
+      >
+      <span
+        class="text-sm text-500 pt-1 flex align-items-center justify-content-center border-round"
+        >PDF</span
+      >
+    </button>
+  </div>
+  <ng-template pTemplate="footer">
+    <div class="formgrid grid">
+      <div class="field col">
+        <button
+          pButton
+          pRipple
+          label="Cancelar"
+          icon="pi pi-times"
+          class="p-button-outlined p-button-info w-full"
+          (click)="hideAddFileDialog()"
+        ></button>
+      </div>
+      <div class="field col">
+        <button
+          pButton
+          pRipple
+          label="Subir"
+          icon="pi pi-check"
+          class="p-button-success w-full"
+        ></button>
+      </div>
+    </div>
+  </ng-template>
+</p-dialog>
