--- a/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/exp-pers-crd/exp-pers-crd.component.html
@@ -1,57 +1,45 @@
-<div class="grid">
-  <div class="col">
-    <div class="border-round-sm flex justify-content-between">
-      <div class="flex align-items-center justify-content-center">
-        <span class="text-base font-medium">Experiencia</span>
-      </div>
-      <div class="flex align-items-center justify-content-center">
-        <button
-          pButton
-          pRipple
-          icon="pi pi-plus"
-          class="p-button-rounded p-button-secondary p-button-text p-button-sm"
-          (click)="openNewWorkExperienceDialog()"
-        ></button>
+<div class="flex flex-wrap border-round m-1 sm:m-2 sm:mr-0">
+  <div class="w-12 p-1 flex align-items-center justify-content-between">
+    <div class="flex align-items-center justify-content-center">
+      <span class="text-base font-medium">Experiencia</span>
+    </div>
+    <div class="flex align-items-center justify-content-center">
+      <button
+        pButton
+        pRipple
+        icon="pi pi-plus"
+        class="p-button-rounded p-button-secondary p-button-text p-button-sm"
+        (click)="openNewWorkExperienceDialog()"
+      ></button>
+    </div>
+  </div>
+  <div class="w-2 py-1 flex align-items-center justify-content-center">
+    <p-avatar
+      image="./assets/users/1.jpg"
+      size="large"
+      shape="circle"
+    ></p-avatar>
+  </div>
+  <div class="w-8 p-1 flex align-items-center justify-content-center">
+    <div class="flex flex-column gap-2 w-full">
+      <div class="flex align-items-center font-semibold">FRACTAL</div>
+      <div class="flex align-items-center profile-detail text-sm">
+        Desarrollador Full-Stack 2015 - 2021 6años
       </div>
     </div>
-
-    <div class="border-round-sm">
-      <div class="grid">
-        <div class="col-2">
-          <div
-            class="flex align-items-center justify-content-center h-4rem border-round"
-          >
-            <p-avatar
-              image="./assets/users/1.jpg"
-              size="large"
-              shape="circle"
-            ></p-avatar>
-          </div>
-        </div>
-        <div class="col-8">
-          <div class="flex align-items-center h-4rem border-round">
-            <div class="flex flex-column gap-2 w-full">
-              <div class="flex align-items-center font-semibold">FRACTAL</div>
-              <div class="flex align-items-center profile-detail text-sm">
-                Desarrollador Full-Stack 2015 - 2021 6años
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-2">
-          <div
-            class="flex align-items-center justify-content-center h-4rem border-round"
-          >
-            <button
-              pButton
-              pRipple
-              type="button"
-              icon="pi pi-pencil"
-              class="p-button-rounded p-button-secondary p-button-text"
-            ></button>
-          </div>
-        </div>
-      </div>
+  </div>
+  <div class="w-2 py-1 flex align-items-center justify-content-center">
+    <div
+      class="flex align-items-center justify-content-center h-4rem border-round"
+    >
+      <button
+        pButton
+        pRipple
+        type="button"
+        icon="pi pi-pencil"
+        class="p-button-rounded p-button-secondary p-button-text"
+        (click)="openEditWorkExperienceDialog()"
+      ></button>
     </div>
   </div>
 </div>
@@ -74,31 +62,21 @@
   </ng-template>
   <div>
     <p>Empresa</p>
-    <input pInputText placeholder="Nombre de la empresa" class="w-full" />
-    <div class="pt-2">
-      <p-checkbox
-        [binary]="true"
-        inputId="binary"
-        label="Aquí en Fractal"
-      ></p-checkbox>
-    </div>
+    <input pInputText placeholder="Nombre de la empresa" class="w-full"/>
+    <p-checkbox [binary]="true" inputId="binary" label="Aquí en Fractal" class="mt-3"></p-checkbox>
     <p>Puesto</p>
-    <input pInputText placeholder="Puesto en la empresa" class="w-full" />
+    <input pInputText placeholder="Puesto en la empresa" class="w-full"/>
     <div class="formgrid grid">
-      <div class="field col">
-        <p>Año y mes de inicio</p>
-        <input pInputText class="w-full" />
-      </div>
-      <div class="field col">
-        <p>Año y mes fin</p>
-        <input pInputText class="w-full" />
-      </div>
+        <div class="field col">
+            <p>Año y mes de inicio</p>
+            <p-calendar class="w-full" styleClass="w-full" dateFormat="mm/yy" inputId="dateformat" appendTo="body"></p-calendar>
+        </div>
+        <div class="field col">
+            <p>Año y mes fin</p>
+            <p-calendar class="w-full" styleClass="w-full" dateFormat="mm/yy" inputId="dateformat" appendTo="body"></p-calendar>
+        </div>
     </div>
-    <p-checkbox
-      [binary]="true"
-      inputId="binary"
-      label="Hasta la actualidad"
-    ></p-checkbox>
+    <p-checkbox [binary]="true" inputId="binary" label="Hasta la actualidad"></p-checkbox>
   </div>
   <ng-template pTemplate="footer">
     <div class="formgrid grid">
@@ -117,6 +95,65 @@
           pButton
           pRipple
           label="Agregar"
+          icon="pi pi-check"
+          class="p-button-success w-full"
+        ></button>
+      </div>
+    </div>
+  </ng-template>
+</p-dialog>
+
+<p-dialog
+  [(visible)]="editWorkExperienceDialog"
+  [modal]="true"
+  [closable]="false"
+  [style]="{ width: '650px' }"
+>
+  <ng-template pTemplate="header">
+    <div class="flex flex-column">
+      <div class="flex align-items-start justify-content-start h-3rem">
+        <h2>Agrega una nueva experiencia</h2>
+      </div>
+      <div class="flex align-items-start justify-content-start h-2rem">
+        <p>Describe y agrega tu nueva experiencia laboral.</p>
+      </div>
+    </div>
+  </ng-template>
+  <div>
+    <p>Empresa</p>
+    <input pInputText placeholder="Nombre de la empresa" class="w-full"/>
+    <p-checkbox [binary]="true" inputId="binary" label="Aquí en Fractal" class="mt-3"></p-checkbox>
+    <p>Puesto</p>
+    <input pInputText placeholder="Puesto en la empresa" class="w-full"/>
+    <div class="formgrid grid">
+        <div class="field col">
+            <p>Año y mes de inicio</p>
+            <p-calendar class="w-full" styleClass="w-full" dateFormat="mm/yy" inputId="dateformat" appendTo="body"></p-calendar>
+        </div>
+        <div class="field col">
+            <p>Año y mes fin</p>
+            <p-calendar class="w-full" styleClass="w-full" dateFormat="mm/yy" inputId="dateformat" appendTo="body"></p-calendar>
+        </div>
+    </div>
+    <p-checkbox [binary]="true" inputId="binary" label="Hasta la actualidad"></p-checkbox>
+  </div>
+  <ng-template pTemplate="footer">
+    <div class="formgrid grid">
+      <div class="field col">
+        <button
+          pButton
+          pRipple
+          label="Cancelar"
+          icon="pi pi-times"
+          class="p-button-outlined p-button-info w-full"
+          (click)="hideEditWorkExperienceDialog()"
+        ></button>
+      </div>
+      <div class="field col">
+        <button
+          pButton
+          pRipple
+          label="Editar"
           icon="pi pi-check"
           class="p-button-success w-full"
         ></button>
