--- a/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
@@ -1,6 +1,6 @@
-<div class="grid">
-  <div class="col-7">
-    <div class="border-round-sm flex justify-content-between">
+<div class="flex flex-wrap border-round m-1 sm:m-2 sm:mr-0">
+  <div class="w-12 sm:w-7 p-1 flex flex-column">
+    <div class="w-12 border-round-sm flex justify-content-between">
       <div class="flex align-items-center justify-content-center">
         <span class="text-base font-medium">Habilidades Técnicas</span>
       </div>
@@ -25,9 +25,8 @@
       </div>
     </div>
   </div>
-
-  <div class="col-5">
-    <div class="border-round-sm flex justify-content-between">
+  <div class="w-12 sm:w-5 py-1 flex flex-column">
+    <div class="w-12 border-round-sm flex justify-content-between">
       <div class="flex align-items-center justify-content-center">
         <span class="text-base font-medium">Habilidades Blandas</span>
       </div>
@@ -53,8 +52,12 @@
     </div>
   </div>
 </div>
-
-<p-dialog [(visible)]="technicalSkillsDialog" [modal]="true" [closable]="false" [style]="{ width: '650px' }">
+<p-dialog
+  [(visible)]="technicalSkillsDialog"
+  [modal]="true"
+  [closable]="false"
+  [style]="{ width: '650px' }"
+>
   <ng-template pTemplate="header">
     <div class="flex flex-column">
       <div class="flex align-items-start justify-content-start h-3rem">
@@ -66,12 +69,10 @@
     </div>
   </ng-template>
   <div>
-    <h4>Habilidad técnica</h4>
-    <input pInputText placeholder="Nombre de la empresa" class="w-full" />
-  </div>
-  <div>
-    <h4>Años de Experiencia</h4>
-    <p-inputNumber inputId="integeronly" [size]="60"></p-inputNumber>
+    <p>Habilidad técnica</p>
+    <input pInputText placeholder="Nombre de la habilidad" class="w-full"/>
+    <p>Años de experiencia</p>
+    <p-inputNumber class="w-full" styleClass="w-full" placeholder="Nro. de años"></p-inputNumber>           
   </div>
   <ng-template pTemplate="footer">
     <div class="formgrid grid">
@@ -98,7 +99,12 @@
   </ng-template>
 </p-dialog>
 
-<p-dialog [(visible)]="softSkillsDialog" [modal]="true" [closable]="false" [style]="{ width: '650px' }">
+<p-dialog
+  [(visible)]="softSkillsDialog"
+  [modal]="true"
+  [closable]="false"
+  [style]="{ width: '650px' }"
+>
   <ng-template pTemplate="header">
     <div class="flex flex-column">
       <div class="flex align-items-start justify-content-start h-3rem">
@@ -111,7 +117,7 @@
   </ng-template>
   <div>
     <h4>Habilidad blanda</h4>
-    <input pInputText placeholder="Nombre de la empresa" class="w-full" />
+    <input pInputText placeholder="Nombre de la habilidad" class="w-full" />
   </div>
   <ng-template pTemplate="footer">
     <div class="formgrid grid">
