feat: Add a carousel to display certifications

--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
@@ -23,6 +23,7 @@
           [style]="{ width: '100%', height: 'calc(100vh - 190px)' }"
         >
           <shared-prof-pers-crd></shared-prof-pers-crd>
+          <shared-certs-pers-crd></shared-certs-pers-crd>
           <shared-skills-pers-crd></shared-skills-pers-crd>
           <shared-summ-pers-crd></shared-summ-pers-crd>
           <shared-exp-pers-crd></shared-exp-pers-crd>
