--- a/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
@@ -62,7 +62,13 @@
     </div>
     <div class="h-7rem">
       <p>Feedback</p>
-      <textarea rows="5" cols="30" pInputTextarea placeholder="Escribe un comentario" class="w-full h-5rem"></textarea>
+      <textarea
+        rows="5"
+        cols="30"
+        pInputTextarea
+        placeholder="Escribe un comentario"
+        class="w-full h-5rem"
+      ></textarea>
     </div>
   </div>
   <ng-template pTemplate="footer">
