--- a/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/certs-pers-crd/certs-pers-crd.component.html
@@ -1,5 +1,65 @@
-<p>certs-pers-crd works!</p>
-
+<div class="flex flex-wrap border-round m-1 sm:m-2 sm:mr-0">
+  <div class="w-12 sm:w-8 p-1 flex align-items-center justify-content-center">
+    <p-carousel
+      [value]="products"
+      [numVisible]="2"
+      [numScroll]="2"
+      [circular]="true"
+      [showIndicators]="false"
+      [responsiveOptions]="responsiveOptions"
+      class="w-full"
+    >
+      <ng-template let-product pTemplate="item">
+        <div class="h-9rem w-full py-1">
+          <div class="border-round px-2">
+            <div
+              class="w-full h-8rem border-round flex flex-column align-items-center justify-content-center"
+            >
+              <div class="h-6rem w-full border-round-top overflow-hidden">
+                <img src="./assets/users/1.jpg" [alt]="" class="file-image" />
+              </div>
+              <div
+                class="h-2rem w-full border-round-bottom surface-100 flex align-items-center justify-content-center"
+              >
+                <div
+                  class="flex w-full flex-column align-items-center align-content-start"
+                >
+                  <div
+                    class="w-12 border-round text-xs text-500 flex align-items-center pl-2"
+                  >
+                    Certificado {{ product.name }}
+                  </div>
+                  <div
+                    class="w-12 border-round text-xs text-500 flex align-items-center pl-2"
+                  >
+                    PDF
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </ng-template>
+    </p-carousel>
+  </div>
+  <div class="w-12 sm:w-4 py-1 flex align-items-center justify-content-center">
+    <button
+      pButton
+      class="p-button-outlined border-transparent h-8rem w-10 surface-50 flex flex-column"
+      (click)="openAddFileDialog()"
+    >
+      <i
+        class="pi pi-cloud-upload px-2 pt-3"
+        style="font-size: 1.5rem; color: #708090"
+      ></i>
+      <span
+        class="px-3 pt-4 flex align-items-center justify-content-center font-bold border-round"
+        style="color: #0b85c3"
+        >Sube un archivo</span
+      >
+    </button>
+  </div>
+</div>
 <p-dialog
   [(visible)]="addFileDialog"
   [modal]="true"
@@ -12,7 +72,10 @@
         <h2>Agrega un archivo</h2>
       </div>
       <div class="flex align-items-start justify-content-start h-2rem">
-        <p>Sube tu nuevo certificado, diploma o algún archivo que respalde tus aptitudes.</p>
+        <p>
+          Sube tu nuevo certificado, diploma o algún archivo que respalde tus
+          aptitudes.
+        </p>
       </div>
     </div>
   </ng-template>
