--- a/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/lang-pers-crd/lang-pers-crd.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-wrap border-round m-1 sm:m-2 sm:mr-0">
   <div class="w-12 p-1 flex align-items-center justify-content-between">
     <div class="flex align-items-center justify-content-center">
-      <span class="text-base font-medium">Idiomas</span>
+      <span class="font-semibold text-base text-600">Idiomas</span>
     </div>
     <div class="flex align-items-center justify-content-center">
       <button
@@ -13,32 +13,38 @@
       ></button>
     </div>
   </div>
-  <div class="w-3 sm:w-2 py-1 flex align-items-center justify-content-center">
-    <div class="flex flex-column gap-2">
-      <div class="flex align-items-center font-semibold">Inglés</div>
-      <div class="flex align-items-center profile-detail text-sm">Avanzado</div>
+  <div class="w-12 flex align-items-center surface-hover p-1 border-round-md">
+    <div class="w-3 sm:w-2 py-1 flex align-items-center justify-content-center">
+      <div class="flex flex-column gap-2">
+        <div class="flex align-items-center font-semibold text-base text-800">
+          Inglés
+        </div>
+        <div class="flex align-items-center text-500 text-sm font-normal">
+          Avanzado
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="w-7 sm:w-8 p-1 flex align-items-center justify-content-start">
-    <p-rating
-      [(ngModel)]="rating"
-      [stars]="5"
-      [cancel]="false"
-      [readonly]="true"
-    ></p-rating>
-  </div>
-  <div class="w-2 py-1 flex align-items-center justify-content-center">
-    <div
-      class="flex align-items-center justify-content-center h-4rem border-round"
-    >
-      <button
-        pButton
-        pRipple
-        type="button"
-        icon="pi pi-pencil"
-        class="p-button-rounded p-button-secondary p-button-text"
-        (click)="openEditLanguageDialog()"
-      ></button>
+    <div class="w-7 sm:w-8 p-1 flex align-items-center justify-content-start">
+      <p-rating
+        [(ngModel)]="rating"
+        [stars]="5"
+        [cancel]="false"
+        [readonly]="true"
+      ></p-rating>
+    </div>
+    <div class="w-2 py-1 flex align-items-center justify-content-center">
+      <div
+        class="flex align-items-center justify-content-center h-4rem border-round"
+      >
+        <button
+          pButton
+          pRipple
+          type="button"
+          icon="pi pi-pencil"
+          class="p-button-rounded p-button-secondary p-button-text"
+          (click)="openEditLanguageDialog()"
+        ></button>
+      </div>
     </div>
   </div>
 </div>
@@ -61,9 +67,25 @@
   </ng-template>
   <div>
     <p>Idioma</p>
-    <p-dropdown [options]="languages" placeholder="Nombre del idioma" optionLabel="name" [showClear]="true" appendTo="body" class="w-full" styleClass="w-full"></p-dropdown>
+    <p-dropdown
+      [options]="languages"
+      placeholder="Nombre del idioma"
+      optionLabel="name"
+      [showClear]="true"
+      appendTo="body"
+      class="w-full"
+      styleClass="w-full"
+    ></p-dropdown>
     <p>Nivel</p>
-    <p-dropdown [options]="levels" placeholder="Nivel del idioma" optionLabel="name" [showClear]="true" appendTo="body" class="w-full" styleClass="w-full"></p-dropdown>
+    <p-dropdown
+      [options]="levels"
+      placeholder="Nivel del idioma"
+      optionLabel="name"
+      [showClear]="true"
+      appendTo="body"
+      class="w-full"
+      styleClass="w-full"
+    ></p-dropdown>
     <div class="pt-4">
       <p-rating></p-rating>
     </div>
@@ -111,11 +133,27 @@
   </ng-template>
   <div>
     <p>Idioma</p>
-    <p-dropdown [options]="languages" placeholder="Nombre del idioma" optionLabel="name" [showClear]="true" appendTo="body" class="w-full" styleClass="w-full"></p-dropdown>
+    <p-dropdown
+      [options]="languages"
+      placeholder="Nombre del idioma"
+      optionLabel="name"
+      [showClear]="true"
+      appendTo="body"
+      class="w-full"
+      styleClass="w-full"
+    ></p-dropdown>
     <p>Nivel</p>
-    <p-dropdown [options]="levels" placeholder="Nivel del idioma" optionLabel="name" [showClear]="true" appendTo="body" class="w-full" styleClass="w-full"></p-dropdown>
+    <p-dropdown
+      [options]="levels"
+      placeholder="Nivel del idioma"
+      optionLabel="name"
+      [showClear]="true"
+      appendTo="body"
+      class="w-full"
+      styleClass="w-full"
+    ></p-dropdown>
     <div class="pt-4">
-        <p-rating></p-rating>
+      <p-rating></p-rating>
     </div>
   </div>
   <ng-template pTemplate="footer">
