--- a/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/skills-pers-crd/skills-pers-crd.component.html
@@ -2,7 +2,9 @@
   <div class="w-12 sm:w-7 p-1 flex flex-column">
     <div class="w-12 border-round-sm flex justify-content-between">
       <div class="flex align-items-center justify-content-center">
-        <span class="text-base font-medium">Habilidades Técnicas</span>
+        <span class="font-semibold text-base text-600"
+          >Habilidades Técnicas</span
+        >
       </div>
       <div class="flex align-items-center justify-content-center">
         <button
@@ -28,7 +30,9 @@
   <div class="w-12 sm:w-5 py-1 flex flex-column">
     <div class="w-12 border-round-sm flex justify-content-between">
       <div class="flex align-items-center justify-content-center">
-        <span class="text-base font-medium">Habilidades Blandas</span>
+        <span class="font-semibold text-base text-600"
+          >Habilidades Blandas</span
+        >
       </div>
       <div class="flex align-items-center justify-content-center">
         <button
@@ -70,9 +74,13 @@
   </ng-template>
   <div>
     <p>Habilidad técnica</p>
-    <input pInputText placeholder="Nombre de la habilidad" class="w-full"/>
+    <input pInputText placeholder="Nombre de la habilidad" class="w-full" />
     <p>Años de experiencia</p>
-    <p-inputNumber class="w-full" styleClass="w-full" placeholder="Nro. de años"></p-inputNumber>           
+    <p-inputNumber
+      class="w-full"
+      styleClass="w-full"
+      placeholder="Nro. de años"
+    ></p-inputNumber>
   </div>
   <ng-template pTemplate="footer">
     <div class="formgrid grid">
