--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
@@ -17,7 +17,7 @@
       class="content bg-white w-12 sm:w-8 font-bold p-2 flex justify-content-center sm:justify-content-start"
     >
       <div
-        class="w-full shadow-8 md:shadow-4 text-center border-round-lg surface-overlay"
+        class="w-full shadow-8 md:shadow-4 text-center border-round-lg surface-overlay overflow-hidden"
       >
         <p-scrollPanel
           [style]="{ width: '100%', height: 'calc(100vh - 190px)' }"
