--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.scss
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.scss
@@ -1,32 +1,17 @@
-.heart-icon {
-  color: #c11574;
-}
-:host ::ng-deep .p-card-content {
-  padding-top: 2px;
-}
-.contact-icon {
-  color: #98a2b3;
-}
-.custom-cursor {
-  cursor: pointer;
-}
-.profile-role,
-.profile-info,
-.profile-feedbacks,
-.profile-country-salary,
-.profile-detail {
-  color: #798294;
+.content {
+  height: calc(100vh - 180px);
 }
 
 :host ::ng-deep .p-chip.custom-chip {
-  background: var(--blue-100);
-  color: var(--blue-500);
+  background: var(--blue-50);
+  color: var(--blue-600);
 }
 
 :host ::ng-deep .p-chip.custom-red-chip {
-  background: var(--pink-100);
+  background: var(--pink-50);
   color: var(--pink-500);
 }
-.content {
-  height: calc(100vh - 180px);
+
+:host ::ng-deep .p-chip-text {
+  font-size: 0.875rem;
 }
