--- a/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/feedback-crd/feedback-crd.component.html
@@ -1,40 +1,44 @@
 <div class="flex flex-wrap border-round m-1 sm:m-2 sm:mr-0">
   <div class="w-12 p-1 flex align-items-center justify-content-between">
     <div class="flex align-items-center justify-content-center">
-      <span class="text-base font-medium">Feedback</span>
+      <span class="font-semibold text-base text-600">Feedback</span>
     </div>
   </div>
-  <div class="w-2 py-1 flex align-items-center justify-content-center">
-    <p-avatar
-      image="./assets/users/1.jpg"
-      size="large"
-      shape="circle"
-    ></p-avatar>
-  </div>
-  <div class="w-10 p-1 flex align-items-center justify-content-center">
-    <div class="flex flex-column gap-2 w-full">
-      <div class="flex align-items-center font-semibold">
-        Cesar Ortiz
-        <span class="mx-4">
-          <p-rating
-            [(ngModel)]="rating"
-            [stars]="5"
-            [cancel]="false"
-            [readonly]="true"
-          ></p-rating>
-        </span>
-      </div>
-      <div class="flex align-items-center profile-detail text-sm">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis nostrum
-        id ab.
+  <div class="w-12 flex align-items-center surface-hover p-1 border-round-md">
+    <div class="w-2 py-1 flex align-items-center justify-content-center">
+      <p-avatar
+        image="./assets/users/1.jpg"
+        size="large"
+        shape="circle"
+      ></p-avatar>
+    </div>
+    <div class="w-10 p-1 flex align-items-center justify-content-center">
+      <div class="flex flex-column gap-2 w-full">
+        <div class="flex align-items-center font-semibold text-base text-800">
+          Cesar Ortiz
+          <span class="mx-4">
+            <p-rating
+              [(ngModel)]="rating"
+              [stars]="5"
+              [cancel]="false"
+              [readonly]="true"
+            ></p-rating>
+          </span>
+        </div>
+        <div class="flex align-items-center text-500 text-sm font-normal">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis
+          nostrum id ab.
+        </div>
       </div>
     </div>
   </div>
   <div class="w-12 py-1 flex align-items-center justify-content-start">
-    <div class="flex align-items-center justify-content-center border-round">
-      <span class="custom-cursor mx-4" (click)="openNewFeedbackDialog()">
+    <div
+      class="flex align-items-center justify-content-center border-round text-500 text-sm font-normal"
+    >
+      <span class="cursor-pointer mx-4" (click)="openNewFeedbackDialog()">
         <i class="pi pi-plus" style="font-size: 0.75rem"></i>
-        <span class="text-sm"> Dar nuevo feedback</span>
+        <span> Dar nuevo feedback</span>
       </span>
     </div>
   </div>
