--- a/Front/Banco-de-Talentos/src/app/shared/components/pers-prof-crd/pers-prof-crd.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/pers-prof-crd/pers-prof-crd.component.html
@@ -1,5 +1,7 @@
-<div class="bg-blue-50 flex border-round-lg p-2 my-2 w-full">
-  <div class="w-3 font-bold p-2 flex align-items-center justify-content-center">
+<div
+  class="surface-section hover:surface-hover flex border-round-lg p-2 my-2 w-full cursor-pointer"
+>
+  <div class="w-3 p-2 flex align-items-center justify-content-center">
     <p-avatar
       image="./assets/users/1.jpg"
       size="xlarge"
@@ -9,10 +11,12 @@
   <div class="w-7 px-0 py-1 flex align-items-center">
     <div class="flex flex-column flex-wrap w-full gap-1">
       <div class="border-round flex align-items-center justify-content-start">
-        <span class="font-semibold">Juan Lopez Martinez</span>
+        <span class="font-semibold text-base text-800">
+          Juan Lopez Martinez
+        </span>
       </div>
       <div class="border-round flex align-items-center justify-content-start">
-        <span class="profile-role text-sm">Full-stack developer</span>
+        <span class="text-500 text-sm font-light"> Full-stack developer </span>
       </div>
       <div class="border-round flex align-items-center justify-content-between">
         <p-rating
@@ -22,23 +26,19 @@
           [readonly]="true"
         ></p-rating>
       </div>
-      <div
-        class="border-round flex align-items-center justify-content-between profile-country-salary"
-      >
-        <span class="text-sm">
+      <div class="border-round flex align-items-center justify-content-between">
+        <span class="text-500 text-sm font-light">
           <i class="pi pi-map-marker" style="font-size: 0.875rem"></i>
           Lima, Peru
         </span>
-        <span class="text-sm">
+        <span class="text-500 text-sm font-light">
           <i class="pi pi-dollar" style="font-size: 0.875rem"></i>
           2500 - 3000
         </span>
       </div>
     </div>
   </div>
-  <div
-    class="w-2 font-bold p-2 flex align-content-start justify-content-center"
-  >
+  <div class="w-2 p-2 flex align-content-start justify-content-center">
     <span class="heart-icon">
       <i class="pi pi-heart-fill" style="font-size: 1.25rem"></i>
     </span>
