--- a/Front/Banco-de-Talentos/src/styles.scss
+++ b/Front/Banco-de-Talentos/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-
+/* font-semibold text-base text-800  --- name
+/* text-500 text-sm font-light       --- card detail
+/* font-semibold text-base text-600  --- educ - exp - lang - title
+/* text-500 text-sm font-normal      --- educ - exp - lang
+/* w-12 flex align-items-center surface-hover p-1 border-round-md
 /*Prime NG*/
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeflex/primeflex.scss";
