--- a/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
@@ -70,7 +70,7 @@
                 </div>
                 <div>
                     <h3>Puesto actual</h3>
-                    <p-dropdown [options]="jobs" styleClass="w-full" class="w-full" placeholder="Puesto Actual" optionLabel="name" [showClear]="true" appendTo="body"></p-dropdown>
+                    <p-dropdown [options]="profiles" styleClass="w-full" class="w-full" placeholder="Puesto Actual" optionLabel="name" [showClear]="true" appendTo="body"></p-dropdown>
                 </div>
                 <div class="pt-1">
                     <h3>Medios Sociales</h3>
