--- a/Front/Banco-de-Talentos/src/app/auth/login/login.component.html
+++ b/Front/Banco-de-Talentos/src/app/auth/login/login.component.html
@@ -1,44 +1,31 @@
-<div class="login-container">
-  <div class="p-4 shadow-2 border-round w-full lg:w-6">
-    <div class="text-center mb-5">
-      <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
-      <span class="text-600 font-medium line-height-3"
-        >Don't have an account?</span
-      >
-      <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer"
-        >Create today!</a
-      >
+<div class="flex" [style]="{ 'height': '100vh' }">
+  <div class="flex align-items-center justify-content-center" [style]="{ 'width': '50%' }">
+    <div class="flex align-items-center justify-content-center" [style]="{ 'width': '75%' }">
+      <div class="w-full">
+        <div class="mb-7">
+          <p-image src="./assets/login/Fractal Logo Login.png" width="350"></p-image>
+        </div>
+        <h2>Inicio de sesión</h2>
+        <label>Inicia sesión</label>
+        <h4>Usuario</h4>
+        <input pInputText placeholder="Nombre de usuario" class="w-full"/>
+        <h4>Contraseña</h4>
+        <p-password [toggleMask]="true" placeholder="Contraseña" class="w-full" styleClass="w-full p-password p-component p-inputwrapper p-input-icon-right" inputStyleClass="w-full"></p-password>
+        <p class="m-4 ml-0" [style]="{ 'color': '#0B85C3', 'font-weight': 'bold' }">Olvidé mi contraseña</p>
+        <button
+          pButton
+          pRipple
+          type="button"
+          label="Iniciar sesión"
+          class="p-button-success w-full"
+          [style]="{'height': '50px'}"
+          (click)="onLogin()"
+        ></button>
+      </div>
     </div>
-
-    <div>
-      <label for="email1" class="block text-900 font-medium mb-2">Email</label>
-      <input
-        id="email1"
-        type="text"
-        placeholder="Email address"
-        pInputText
-        class="w-full mb-3"
-      />
-
-      <label for="password1" class="block text-900 font-medium mb-2"
-        >Password</label
-      >
-      <input
-        id="password1"
-        type="password"
-        placeholder="Password"
-        pInputText
-        class="w-full mb-3"
-      />
-
-      <button
-        pButton
-        pRipple
-        label="Sign In"
-        icon="pi pi-user"
-        class="w-full"
-        (click)="onLogin()"
-      ></button>
-    </div>
+  </div>
+  <div class="surface-100 flex align-items-center justify-content-center" [style]="{ 'width': '50%' }">
+    <p-image src="./assets/login/Map.png"></p-image>
+    <p-image src="./assets/login/People.png" class="absolute"></p-image>
   </div>
 </div>
