--- a/Front/Banco-de-Talentos/src/app/auth/login/login.component.scss
+++ b/Front/Banco-de-Talentos/src/app/auth/login/login.component.scss
@@ -1,6 +1,3 @@
-.login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+.p-password-input {
+  width: 100%;
 }
